# UQM-MegaMod

./: .gitignore  CMakeLists.txt  README.md  build-switch.sh  build.vars.switch  config_unix.h.switch
src/: options.c  options.h  uqm.c
src/libs/: file.h
src/libs/file/: dirs.c
src/libs/sound/: trackplayer.c
src/uqm/: gameopt.c  setup.c  setup.h  setupmenu.c  setupmenu.h
